# map-equation-similarity

./: LICENSE  Makefile  README.md  decompressing.py  pathcost.py  setup.cfg
examples/: coding-example.net
src/mapsim/: __init__.py  codebook.py  mapsim.py  plotting.py  util.py
src/mapsim/io/: __init__.py  reader.py
src/pathcost/: __init__.py  codebook.py  pathcost.py  util.py
src/pathcost/io/: reader.py
tests/: test_example_network.py  test_load_treefile.py  test_provoke_division_by_zero.py  test_recommendation.py
