[metadata]
name = pathcost
version = attr: pathcost.__version__
author = Christopher Blöcker
author_email = christopher.blocker@umu.se
description = Community-based path prediction with information-theoretic principles.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mapequation/pathcost
project_urls =
    Bug Tracker = https://github.com/mapequation/pathcost/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
install_requires = 
    infomap

[options.packages.find]
where = src
