[metadata]
name = mapsim
version = attr: mapsim.__version__
author = Christopher Blöcker
author_email = christopher.blocker@umu.se
description = Community-based link prediction with information-theoretic principles.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mapequation/map-equation-similarity
project_urls =
    Bug Tracker = https://github.com/mapequation/map-equation-similarity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
install_requires = 
    infomap >= 2.0
    matplotlib
    numpy >= 1.21
    networkx >= 2.6
    seaborn

[options.packages.find]
where = src
